--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     
 </head>
 <body>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+<!--     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script> -->
     <!--<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js" integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+" crossorigin="anonymous"></script>
   
@@ -70,7 +70,7 @@
                     <!-- <p class="lead">PhD Student at the Technion </p> -->
                     <p>I am a PhD student at the <a href="https://ece.technion.ac.il/" target="_blank">Electrical and Computer Engineering department</a>
                         of the <a href="https://www.technion.ac.il/en/home-2/" target="_blank">Technion</a>, 
-                        under the supervission of <a href="https://tomer.net.technion.ac.il/" target="_blank"> Prof. Tomer Mihcaeli</a>.</p>
+                        under the supervission of <a href="https://tomer.net.technion.ac.il/" target="_blank"> Prof. Tomer Michaeli</a>.</p>
                     <p>I received my BSc (Summa Cum Laude) in Electrical and Computer Engineering at the Technion as well.</p>
                     <p>My research interests lie in the field of deep learning, with a focus on generative models.
                         I am particularly interested in exploring their applications, interpretability, and reliability.</p> 
@@ -122,6 +122,23 @@
                     </p>
                 </div>
                 <img src="assets/zeroshotaudioediting.png" class="card-img-bottom" style="padding-left: 7rem; padding-right: 7rem;" alt="">
+	        <div class="card" style="margin-left:5rem; margin-right:5rem; margin-top:1rem;">
+		    <div class="card-header" id="headingOne">
+		        <h5 class="mb-0">
+			    <button class="btn btn-sm btn-link p-0" type="button" data-bs-toggle="collapse" data-bs-target="#huggingface_demo" aria-expanded="false" aria-controls="huggingface_demo">
+			        Hugging Face Space Demo
+			    </button>
+		        </h5>
+		    </div>
+		
+		    <div id="huggingface_demo" class="collapse">
+		        <div class="card-body">
+			    <center>
+			        <iframe src="https://hilamanor-audioediting.hf.space" frameborder="0" width="850" height="450"></iframe>
+			    </center>
+		        </div>
+		    </div>
+	        </div>
             </div>
 
             
