--- a/index.html
+++ b/index.html
@@ -111,6 +111,8 @@
                             <a href="https://hilamanor.github.io/AudioEditing/"><i class="fa fa-external-link fa-lg" aria-hidden="true"></i></a>
                             &nbsp;
                             <a href="https://github.com/HilaManor/AudioEditingCode/"><i class="fa fa-github fa-lg" aria-hidden="true"></i></a>
+			    &nbsp;
+                            <span class="badge bg-primary">ICML 2024</span>
                         </div>
                     </div>
                     <h6 class="card-subtitle mb-2 text-muted"><b>Hila Manor</b>, <a href="https://tomer.net.technion.ac.il/" target="_blank" class="text-muted">Tomer Michaeli</a></h6>
@@ -122,11 +124,11 @@
                     </p>
                 </div>
                 <img src="assets/zeroshotaudioediting.png" class="card-img-bottom" style="padding-left: 7rem; padding-right: 7rem;" alt="">
-	        <div class="card" style="margin-left:5rem; margin-right:5rem; margin-top:1rem;">
-		    <div class="card-header" id="headingOne">
-		        <h5 class="mb-0">
+	        <div class="card" style="margin-left:5rem; margin-right:5rem; margin-top:1rem; margin-bottom:0.5rem;">
+		    <div class="card-header" id="headingOne" style="border: none;">
+		        <h5 class="mb-0 text-center">
 			    <button class="btn btn-sm btn-link p-0" type="button" data-bs-toggle="collapse" data-bs-target="#huggingface_demo" aria-expanded="false" aria-controls="huggingface_demo">
-			        Hugging Face Space Demo
+			        🤗 Hugging Face Space Demo
 			    </button>
 		        </h5>
 		    </div>
