--- a/index.html
+++ b/index.html
@@ -67,8 +67,8 @@
                 </div>
                 <div class="col-md-8">
                     <h1 class="display-4">Hila Manor</h1>
-                    <!-- <p class="lead">PhD Student at the Technion </p> -->
-                    <p>I am a PhD student at the <a href="https://ece.technion.ac.il/" target="_blank">Electrical and Computer Engineering department</a>
+                    <!-- <p class="lead">PhD Candidate at the Technion </p> -->
+                    <p>I am a PhD candidate at the <a href="https://ece.technion.ac.il/" target="_blank">Electrical and Computer Engineering department</a>
                         of the <a href="https://www.technion.ac.il/en/home-2/" target="_blank">Technion</a>, 
                         under the supervission of <a href="https://tomer.net.technion.ac.il/" target="_blank"> Prof. Tomer Michaeli</a>.</p>
                     <p>I received my BSc (Summa Cum Laude) in Electrical and Computer Engineering at the Technion as well.</p>
@@ -79,6 +79,8 @@
                         <a href="https://github.com/HilaManor/"><i class="fa fa-github fa-2x" aria-hidden="true"></i></a>
                         &nbsp;
                         <a href="https://scholar.google.com/citations?user=Pz32vm4AAAAJ&hl=en"><i class="ai ai-google-scholar ai-2x " aria-hidden="true"></i></a>
+                        &nbsp;
+			<a href="https://www.semanticscholar.org/author/Hila-Manor/2245392181"><i class="ai ai-semantic-scholar ai-2x " aria-hidden="true"></i></a>
                         &nbsp;
                         <a href="https://www.linkedin.com/in/hilamanor/"><i class="fa fa-linkedin-square fa-2x" aria-hidden="true"></i></a>
                         &nbsp;
