adding ICML accepted papers

--- a/index.html
+++ b/index.html
@@ -116,10 +116,13 @@
 			                &nbsp;
                             <a class="link-underline link-underline-opacity-0" href="https://huggingface.co/spaces/DDCM/DDCM-Compressed-Image-Generation">🤗</a>
 			                &nbsp;
+                            <span class="badge bg-primary">ICML 2025</span></h5>
                         </h5>
                         </div>
                     </div>
-                    <h6 class="card-subtitle mb-2 text-muted" style="font-weight: 400;">Guy Ohayon*, <b>Hila Manor*</b>, <a href="https://elad.cs.technion.ac.il/" target="_blank" class="text-muted">Michael Elad</a>, <a href="https://tomer.net.technion.ac.il/" target="_blank" class="text-muted">Tomer Michaeli</a></h6>
+                    <h6 class="card-subtitle mb-2 text-muted">
+                        <a href="https://ohayonguy.github.io/" target="_blank" class="text-muted"> Guy Ohayon</a>*, 
+                        <b>Hila Manor*</b>, <a href="https://elad.cs.technion.ac.il/" target="_blank" class="text-muted">Michael Elad</a>, <a href="https://tomer.net.technion.ac.il/" target="_blank" class="text-muted">Tomer Michaeli</a></h6>
                     <p class="card-text">
                         Denoising Diffusion Codebook Models (DDCM) is a novel (and simple) generative approach based on any Denoising Diffusion Model (DDM), that is able to produce high-quality image samples along with their losslessly compressed bit-stream representations. DDCM can easily be utilized for perceptual image compression, as well as for solving a variety of compressed conditional generation tasks such as text-conditional image generation and image restoration, where each generated sample is accompanied by a compressed bit-stream.
                     </p>
@@ -127,6 +130,34 @@
                 <img src="assets/ddcm.png" class="card-img-bottom" style="padding-left: 7rem; padding-right: 7rem;" alt="">
             </div>
 
+            <div class="card mb-3 shadow">
+                <div class="card-body">
+                    <div class="row open-sans-300">
+                        <div class="col"><h5 class="card-title">
+                            <!-- <a href="https://arxiv.org/abs/2502.01189" class="link-dark link-offset-1 link-underline-opacity-10 link-underline-opacity-100-hover"> -->
+                                When Diffusion Models Memorize: Inductive Biases in Probability Flow of Minimum-Norm Shallow Neural Nets
+                            <!-- </a> -->
+                        </h5></div>
+                        <div class="col-auto"><h5>
+                            <span class="badge bg-primary">ICML 2025</span></h5>
+                        </h5>
+                        </div>
+                    </div>
+                    <h6 class="card-subtitle mb-2 text-muted">
+                        <a href="https://www.linkedin.com/in/chenzeno/" target="_blank" class="text-muted"> Chen Zeno</a>, 
+                        <b>Hila Manor</b>,
+                        <a href="https://gregongie.github.io/" target="_blank" class="text-muted">Greg Ongie</a>, 
+                        <a href="https://sites.google.com/view/nir-weinberger/home" target="_blank" class="text-muted">Nir Weinberger</a>, 
+                        <a href="https://tomer.net.technion.ac.il/" target="_blank" class="text-muted">Tomer Michaeli</a>,
+                        <a href="https://soudry.github.io/" target="_blank" class="text-muted">Daniel Soudry</a>
+                    </h6>
+                    <p class="card-text">
+                        We study the score flow and the probability flow of diffusion models, and show that for simple datasets and using shallow ReLU neural denoisers both flows follow similar trajectories, converging to a training point or a sum of training points. However, early stopping by the scheduler allows probability flow to reach more general manifold points.
+                        This reflects the tendency of diffusion models to both memorize training samples and generate novel points that combine aspects of multiple samples, motivating our study of such behavior in simplified settings.
+                    </p>
+                </div>
+                <img src="assets/diffmem.svg" class="card-img-bottom" style="padding-left: 7rem; padding-right: 7rem; max-height: 200px;" alt="">
+            </div>
 
             <div class="card mb-3 shadow">
                 <div class="card-body">
