link to latest paper

--- a/index.html
+++ b/index.html
@@ -134,9 +134,9 @@
                 <div class="card-body">
                     <div class="row open-sans-300">
                         <div class="col"><h5 class="card-title">
-                            <!-- <a href="https://arxiv.org/abs/2502.01189" class="link-dark link-offset-1 link-underline-opacity-10 link-underline-opacity-100-hover"> -->
+                            <a href="https://arxiv.org/abs/2506.19031" class="link-dark link-offset-1 link-underline-opacity-10 link-underline-opacity-100-hover">
                                 When Diffusion Models Memorize: Inductive Biases in Probability Flow of Minimum-Norm Shallow Neural Nets
-                            <!-- </a> -->
+                            </a>
                         </h5></div>
                         <div class="col-auto"><h5>
                             <span class="badge bg-primary">ICML 2025</span></h5>
